--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -36,6 +36,7 @@
             {% endif %}
           </a>
         </div>
+        
         <div class="justify-self-end">
           <ul class="menu menu-horizontal px-1">
             {% if request.user.is_authenticated %}
@@ -56,7 +57,7 @@
                     <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
                   </svg>
                 </a>
-                <ul class="p-2 bg-base-100 border right-0 lg:left-0"
+                <ul class="p-2 bg-base-100 border right-0 lg:left-0 w-40"
                     style="z-index:99999">
                   <li>
                     <a href="{% url 'profile-detail' request.user.profile.short_id %}">Profile</a>
