--- a/cl8/templates/_profile_edit.html
+++ b/cl8/templates/_profile_edit.html
@@ -1,153 +1,143 @@
 {% load static widget_tweaks %}
 <style>
+    div>label {
+        margin-top: 1rem;
+        min-width: 10rem;
+        display: inline-block;
+    }
 
-div > label {
-    margin-top:1rem;
-    min-width: 10rem;
-    display:inline-block;
-}
+    div>input[type='text'] {
+        min-width: 40rem;
+    }
 
-div > input[type='text'] {
-    min-width: 40rem;
-}
-div > .helptext  {
-    margin-left: 10rem;
-}
-div >input[id='id_tags'] {
-    margin-left: 10rem;
-}
-div >input[type='file'] {
-    margin-left: 10rem;
-}
+    div>.helptext {
+        margin-left: 10rem;
+    }
 
+    div>input[id='id_tags'] {
+        margin-left: 10rem;
+    }
 
+    div>input[type='file'] {
+        margin-left: 10rem;
+    }
 </style>
-<div class="card-body">
-    <form enctype="multipart/form-data"
-          method="post"
-          action="{% url 'profile-edit' profile.short_id %}">
-          {% if form.errors %}
-      <div class="alert alert-danger">
-        {{ form.errors }}
-      </div>
-    {% endif %}
+<div class="card-body p-0">
+    <form enctype="multipart/form-data" method="post" action="{% url 'profile-edit' profile.short_id %}">
+        {% if form.errors %}
+        <div class="alert alert-danger">
+            {{ form.errors }}
+        </div>
+        {% endif %}
         {% csrf_token %}
-        <div class="grid lg:grid-cols-3">
-            <div class="">
+        <div class="grid grid-cols-[1fr_minmax(auto,70rem)_1fr]">
+            <div class="sidebar text-center p-3 transition-all border  lg:inline">
                 {% if form.instance.photo %}
-                    <img class="w-48" src="{{ form.instance.photo.url }}" />
+                <img class="w-48 h-48 m-auto block rounded-full object-cover" src="{{ form.instance.photo.url }}" />
                 {% else %}
-                    <img class="w-48" src="{% static 'img/placeholder-person-square.png' %}" />
+                <img class="w-48 h-48 m-auto block rounded-full object-cover"
+                    src="{% static 'img/placeholder-person-square.png' %}" />
                 {% endif %}
                 {% comment %} {{ form.photo }} {% endcomment %}
-                <p class="text-sm my-4">{{ form.photo }}</p>
-                <p class="my-4 w-2/3 p-2 rounded-md {% if form.instance.visible %} bg-red-400 {% else %} bg-green-300 {% endif %}">
+                <!-- <p class="text-sm my-4">{{ form.photo }}</p> -->
+                <button class="btn w-48	 rounded-full primary-btn mt-4 mb-4">Choose file</button>
+                <button class="btn w-48 profile-invisible-btn rounded-full mb-2">Profile invisible</button>
+                <!-- <p
+                    class="my-4 w-2/3 p-2 m-auto rounded-md {% if form.instance.visible %} bg-red-400 {% else %} bg-green-300 {% endif %}">
                     {% render_field form.visible class="checkbox" %}
-                    <label class="label inline mr-4 text-gray-700"
-                           for="{{ form.visible.id_for_label }}">{{ form.visible.label }}</label>
+                    <label class="label inline mr-4 text-gray-700" for="{{ form.visible.id_for_label }}">{{ form.visible.label }}</label>
+                </p> -->
+                <p class="text-sm  px-3 m-auto">When 'visible' is checked, your profile will show up in searches
                 </p>
-                <p class="text-xs w-2/3 px-3">When 'visible' is checked, your profile will show up in searches</p>
             </div>
-            <div class=" col-span-2 prose">
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.name.id_for_label }}">
+            <div class=" col-span-2  p-4 transition-all border  lg:inline">
+                <div class="flex justify-between mb-4">
+                    <button class="mt-3 btn primary-btn rounded-full">Save changes</button>
+                    <a class="mt-3 btn secondary-btn rounded-full" href="{% url 'profile-detail' profile.short_id %}">Cancel</a>
+                </div>
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.name.id_for_label }}">
                         <span class="label-text">{{ form.name.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.name.html_name }}"
-                           value="{{ form.name.value }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Enter Your Name" name="{{ form.name.html_name }}"
+                    value="{{ form.name.value }}" class="input input-bordered w-full empty-field myInput"/>
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.email.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.email.id_for_label }}">
                         <span class="label-text">{{ form.email.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.email.html_name }}"
-                           value="{{ form.email.value }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="E-mail (work or personal) [never displayed to others]" name="{{ form.email.html_name }}"
+                        value="{{ form.email.value }}" class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.organisation.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.organisation.id_for_label }}">
                         <span class="label-text">{{ form.organisation.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.organisation.html_name }}"
-                           value="{{ form.organisation.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Organisation(s)" name="{{ form.organisation.html_name }}"
+                        value="{{ form.organisation.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.location.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.location.id_for_label }}">
                         <span class="label-text">{{ form.location.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.location.html_name }}"
-                           value="{{ form.location.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Location(s)" name="{{ form.location.html_name }}"
+                        value="{{ form.location.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.phone.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.phone.id_for_label }}">
                         <span class="label-text">{{ form.phone.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.phone.html_name }}"
-                           value="{{ form.phone.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Phone Number" name="{{ form.phone.html_name }}"
+                        value="{{ form.phone.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.linkedin.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.linkedin.id_for_label }}">
                         <span class="label-text">{{ form.linkedin.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.linkedin.html_name }}"
-                           value="{{ form.linkedin.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="LinkedIn" name="{{ form.linkedin.html_name }}"
+                        value="{{ form.linkedin.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.twitter.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.twitter.id_for_label }}">
                         <span class="label-text">{{ form.twitter.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.twitter.html_name }}"
-                           value="{{ form.twitter.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Twitter" name="{{ form.twitter.html_name }}"
+                        value="{{ form.twitter.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control w-full max-w-xs">
-                    <label class="label" for="{{ form.facebook.id_for_label }}">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.facebook.id_for_label }}">
                         <span class="label-text">{{ form.facebook.label }}</span>
-                    </label>
-                    <input type="text"
-                           placeholder="Type here"
-                           name="{{ form.facebook.html_name }}"
-                           value="{{ form.facebook.value|default_if_none:'' }}"
-                           class="input input-bordered w-full max-w-xs" />
+                    </label> -->
+                    <input type="text" placeholder="Facebook" name="{{ form.facebook.html_name }}"
+                        value="{{ form.facebook.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
                 </div>
-                <div class="form-control">
-                    <label class="label">
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label">
                         <span class="label-text">{{ form.bio.label }}</span>
-                    </label>
-                    {% render_field form.bio class="textarea textarea-bordered w-full" placeholder="Type here" rows="5" cols="40" %}
+                    </label> -->
+                    {% render_field form.bio class="textarea textarea-bordered empty-field myInput w-full" placeholder="Bio" rows="5" cols="40" %}
                 </div>
-                <div class="form-control w-full">
+                <div class="form-control w-full mb-4">
                     <label class="label">
                         <span class="label-text">{{ form.tags.label }}</span>
                     </label>
                     {% render_field form.tags class="w-full mt-4" %}
                 </div>
+                <div class="flex justify-between mt-4">
+                    <button class="mt-3 btn primary-btn rounded-full">Save changes</button>
+                    <a class="mt-3 btn secondary-btn rounded-full" href="{% url 'profile-detail' profile.short_id %}">Cancel</a>
+                </div>
             </div>
         </div>
-        <button class="mt-3 btn btn-primary">Save changes</button>
-        <a class="mt-3 btn btn-secondary"
-           href="{% url 'profile-detail' profile.short_id %}">Back</a>
+        <!-- <button class="mt-3 btn btn-primary">Save changes</button>
+        <a class="mt-3 btn btn-secondary" href="{% url 'profile-detail' profile.short_id %}">Back</a> -->
     </form>
 </div>
-<script type="text/javascript"
-        src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
 {{ form.media }}
