--- a/cl8/templates/pages/_paginated_profiles.html
+++ b/cl8/templates/pages/_paginated_profiles.html
@@ -6,16 +6,16 @@
       We want our whole div to be clickable, hence the htmx-get, and cursor-pointer
       We use flex box row to have the image and text blocks side by side
       {% endcomment %}
-      <div class="card-body flex-row hover:bg-yellow-100 hover:shadow-lg hover:cursor-pointer"
+      <div class="card-body p-3 flex-row hover:bg-yellow-100 hover:shadow-lg hover:cursor-pointer"
            hx-get="{% url 'profile-detail' profile.short_id %}"
            hx-target="#profile-slot"
            hx-include="#filter-form"
            hx-push-url="true">
-        <div class="profile-thumb w-1/5">
+        <div class="profile-thumb w-1/4 rounded-full">
           {% if profile.photo %}
-            <img src="{{ profile.thumbnail_photo }}"  class="rounded" />
+            <img src="{{ profile.thumbnail_photo }}"  class="rounded-full" />
           {% else %}
-            {% gravatar profile.user.email 150 "Profile via gravatar.com" "rounded" %}
+            {% gravatar profile.user.email 100 "Profile via gravatar.com" "rounded-full" %}
           {% endif %}
         </div>
         <div class="w-4/5">
@@ -36,7 +36,7 @@
           </h4>
           <p>
             {% for tag in profile.tags_with_no_grouping|slice:":4" %}
-              <span class="badge mx-1" data-tag-name="{{ tag.tag.name }}">{{ tag.name }}</span>
+              <span class="badge p-1 mx-1 tags-view text-black hover:border-black hover:text-white" data-tag-name="{{ tag.tag.name }}">{{ tag.name }}</span>
             {% endfor %}
           </p>
         </div>
