--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load static widget_tweaks %}
 {% load account socialaccount %}
 <style>
   .header-color-override {
@@ -36,7 +37,32 @@
             {% endif %}
           </a>
         </div>
-        
+        <section class="search-component grid grid-cols-[1fr_minmax(auto,70rem)_1fr]">
+          <div></div>
+          <section>
+            <div class="card search-block border rounded-none">
+              <div class="card-body">
+                <form id="filter-form"
+                      method="get"
+                      hx-get="/"
+                      hx-trigger="submit, htmx:confirm from:#id_tags, htmx:confirm from:#id_bio, toggle-tag from:body"
+                      hx-target=".sidebar"
+                      hx-push-url="true">
+                  <div class="grid grid-cols-1 lg:grid-cols-[1fr_10rem]">
+                    <div>
+                      {% render_field profile_filter.form.bio hx-get="/" hx-trigger="keyup changed delay:0.1s," hx-target=".sidebar" class="text-xl min-w-[100%]" hx-sync="closest form:abort" %}
+                    </div>
+                    <div>
+                      <button class="btn mt-4 lg:mt-0 lg:ml-4" type="submit">Search</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </section>
+          <div></div>
+          {% comment %} close search component {% endcomment %}
+        </section>
         <div class="justify-self-end">
           <ul class="menu menu-horizontal px-1">
             {% if request.user.is_authenticated %}
