--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -31,7 +31,7 @@
         <span class="hidden 4xl:inline">4xl+</span>
     <p>
     {% endcomment %}
-    <body class="grid grid-rows-[auto_1fr] h-screen">
+    <body class="grid grid-rows-[auto_1fr] min-h-screen">
         <div>
             {% block nav %}
                 {% include "_nav_menu.html" %}
