--- a/cl8/templates/pages/home.html
+++ b/cl8/templates/pages/home.html
@@ -43,10 +43,10 @@
           We only want to hide the list of profiles when there is NO filtered search
           and when a user is not selected.
         {% endcomment %}
-        <div class="sidebar p-3 transition-all border {% if hide_profile_list %}hidden{% endif %} lg:inline"
-             style="height: 100vh">{% include "pages/_paginated_profiles.html" %}</div>
+        <div class="sidebar p-3 transition-all border border-white {% if hide_profile_list %}hidden{% endif %} lg:inline"
+             style="height: 75vh">{% include "pages/_paginated_profiles.html" %}</div>
         <div id="profile-slot"
-             class="card bg-base-100 lg:col-span-2 border rounded-none {% if not hide_profile_list %}hidden{% endif %} lg:inline">
+             class="card bg-transparent lg:col-span-2 border border-white	 rounded-none {% if not hide_profile_list %}hidden{% endif %} lg:inline">
           {% if profile %}
             {% comment %} show the profile with all the tags, and details {% endcomment %}
             {% include '_profile.html' %}
