--- a/cl8/templates/_profile_edit.html
+++ b/cl8/templates/_profile_edit.html
@@ -33,16 +33,25 @@
         <div class="grid grid-cols-[1fr_minmax(auto,70rem)_1fr]">
             <div class="sidebar text-center p-3 transition-all border border-white  lg:inline">
                 {% if form.instance.photo %}
-                <img class="w-48 h-48 m-auto block rounded-full object-cover" src="{{ form.instance.photo.url }}" />
+                <img id="photoPreview" class="w-48 h-48 m-auto block rounded-full object-cover" src="{{ form.instance.photo.url }}" />
                 {% else %}
-                <img class="w-48 h-48 m-auto block rounded-full object-cover"
+                <img id="photoPreview" class="w-48 h-48 m-auto block rounded-full object-cover"
                     src="{% static 'img/placeholder-person-square.png' %}" />
                 {% endif %}
                 {% comment %} {{ form.photo }} {% endcomment %}
+                 
+                  <!-- Hidden file input for image upload -->
+                <input type="file" id="imageInput" name="photo" style="display: none;" accept="image/*">
+                
+                 <!-- Hidden input to store the true/false value -->
+                <input type="hidden" id="visibilityStatus" name="visible" value="{% if form.instance.visible %}true{% else %}false{% endif %}">
+
                 <!-- <p class="text-sm my-4">{{ form.photo }}</p> -->
-                <button class="btn w-48	 rounded-full primary-btn mt-4 mb-4" id="btnImportData">Choose file</button>
-                <button class="btn w-48 profile-invisible-btn rounded-full mb-2">Profile invisible</button>
-                <!-- <p
+                <button class="btn w-48	 rounded-full primary-btn mt-4 mb-4" id="btnImportData" type="button">Choose file</button>
+                    <!-- Profile visibility button -->
+                <button class="btn w-48 {% if form.instance.visible %}profile-visible-btn{% else %}profile-invisible-btn{% endif %} rounded-full mb-2" type="button" id="visibilityToggleBtn">
+                    {% if form.instance.visible %}Profile visible{% else %}Profile invisible{% endif %}
+                </button>                <!-- <p
                     class="my-4 w-2/3 p-2 m-auto rounded-md {% if form.instance.visible %} bg-red-400 {% else %} bg-green-300 {% endif %}">
                     {% render_field form.visible class="checkbox" %}
                     <label class="label inline mr-4 text-gray-700" for="{{ form.visible.id_for_label }}">{{ form.visible.label }}</label>
@@ -59,6 +68,8 @@
                     <!-- <label class="label" for="{{ form.name.id_for_label }}">
                         <span class="label-text">{{ form.name.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.name.errors }}</span>
+
                     <input type="text" placeholder="Enter Your Name" name="{{ form.name.html_name }}"
                     value="{{ form.name.value }}" class="input input-bordered w-full empty-field myInput"/>
                 </div>
@@ -66,13 +77,26 @@
                     <!-- <label class="label" for="{{ form.email.id_for_label }}">
                         <span class="label-text">{{ form.email.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.email.errors }}</span>
                     <input type="text" placeholder="E-mail (work or personal) [never displayed to others]" name="{{ form.email.html_name }}"
                         value="{{ form.email.value }}" class="input input-bordered w-full empty-field myInput" />
                 </div>
+                
+                <div class="form-control w-full mb-4">
+                    <!-- <label class="label" for="{{ form.email.id_for_label }}">
+                        <span class="label-text">{{ form.email.label }}</span>
+                    </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.website.errors }}</span>
+                    <input type="text" placeholder="Website"
+                        name="{{ form.website.html_name }}" value="{{ form.website.value|default_if_none:'' }}"
+                        class="input input-bordered w-full empty-field myInput" />
+                </div>
+
                 <div class="form-control w-full mb-4">
                     <!-- <label class="label" for="{{ form.organisation.id_for_label }}">
                         <span class="label-text">{{ form.organisation.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.organisation.errors }}</span>
                     <input type="text" placeholder="Organisation(s)" name="{{ form.organisation.html_name }}"
                         value="{{ form.organisation.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
@@ -81,6 +105,8 @@
                     <!-- <label class="label" for="{{ form.location.id_for_label }}">
                         <span class="label-text">{{ form.location.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.location.errors }}</span>
+
                     <input type="text" placeholder="Location(s)" name="{{ form.location.html_name }}"
                         value="{{ form.location.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
@@ -89,6 +115,8 @@
                     <!-- <label class="label" for="{{ form.phone.id_for_label }}">
                         <span class="label-text">{{ form.phone.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.phone.errors }}</span>
+
                     <input type="text" placeholder="Phone Number" name="{{ form.phone.html_name }}"
                         value="{{ form.phone.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
@@ -97,30 +125,38 @@
                     <!-- <label class="label" for="{{ form.linkedin.id_for_label }}">
                         <span class="label-text">{{ form.linkedin.label }}</span>
                     </label> -->
-                    <input type="text" placeholder="LinkedIn" name="{{ form.linkedin.html_name }}"
-                        value="{{ form.linkedin.value|default_if_none:'' }}"
+                    <span class="label-text text-red-500 px-1">{{ form.social_1.errors }}</span>
+
+                    <input type="text" placeholder="Social1" name="{{ form.social_1.html_name }}"
+                        value="{{ form.social_1.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
                 </div>
                 <div class="form-control w-full mb-4">
                     <!-- <label class="label" for="{{ form.twitter.id_for_label }}">
                         <span class="label-text">{{ form.twitter.label }}</span>
                     </label> -->
-                    <input type="text" placeholder="Twitter" name="{{ form.twitter.html_name }}"
-                        value="{{ form.twitter.value|default_if_none:'' }}"
+                    <span class="label-text text-red-500 px-1">{{ form.social_2.errors }}</span>
+
+                    <input type="text" placeholder="Social2" name="{{ form.social_2.html_name }}"
+                        value="{{ form.social_2.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
                 </div>
                 <div class="form-control w-full mb-4">
                     <!-- <label class="label" for="{{ form.facebook.id_for_label }}">
                         <span class="label-text">{{ form.facebook.label }}</span>
                     </label> -->
-                    <input type="text" placeholder="Facebook" name="{{ form.facebook.html_name }}"
-                        value="{{ form.facebook.value|default_if_none:'' }}"
+                    <span class="label-text text-red-500 px-1">{{ form.social_3.errors }}</span>
+
+                    <input type="text" placeholder="Social3" name="{{ form.social_3.html_name }}"
+                        value="{{ form.social_3.value|default_if_none:'' }}"
                         class="input input-bordered w-full empty-field myInput" />
                 </div>
                 <div class="form-control w-full mb-4">
                     <!-- <label class="label">
                         <span class="label-text">{{ form.bio.label }}</span>
                     </label> -->
+                    <span class="label-text text-red-500 px-1">{{ form.bio.errors }}</span>
+
                     {% render_field form.bio class="textarea textarea-bordered empty-field myInput w-full" placeholder="Bio" rows="5" cols="40" %}
                 </div>
                 <div class="form-control w-full mb-4">
@@ -141,15 +177,39 @@
 </div>
 <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
 <script>
-    $("#btnImportData").on("click",function (e){
-  var fileDialog = $('<input type="file">');
-  fileDialog.click();
-  fileDialog.on("change",onFileSelected);
-    return false;
-});
+    // Trigger file selection when "Choose file" button is clicked
+    $("#btnImportData").on("click", function () {
+        $("#imageInput").click(); // Trigger the hidden file input
+    });
 
-var onFileSelected = function(e){
-  console.log($(this)[0].files);
-};
+    // Show selected file name or preview the image
+    $("#imageInput").on("change", function () {
+        const file = this.files[0];
+        if (file) {
+            // Update image preview (Optional)
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                $('#photoPreview').attr('src', e.target.result);  // Update image src with the uploaded image
+            }
+            reader.readAsDataURL(file);  // Read the uploaded image file
+        }
+    });
 </script>
+<script>
+    $("#visibilityToggleBtn").on("click", function() {
+        // Toggle the button's active/inactive state
+        $(this).toggleClass("profile-invisible-btn profile-visible-btn");
+        
+        // Change the button text based on its state
+        if ($(this).hasClass("profile-visible-btn")) {
+            $(this).text("Profile visible");
+            // Set hidden input value to true when active
+            $("#visibilityStatus").val("true");
+        } else {
+            $(this).text("Profile invisible");
+            // Set hidden input value to false when inactive
+            $("#visibilityStatus").val("false");
+        }
+    });
+    </script>
 {{ form.media }}
