--- a/cl8/templates/account/_nav_logged_out.html
+++ b/cl8/templates/account/_nav_logged_out.html
@@ -15,7 +15,7 @@
     <div>
         <div class="flex justify-between items-center">
             <div class="justify-self-start">
-                <a class="btn btn-ghost normal-case text-xl max-w-xs">
+                <a class="btn btn-ghost normal-case text-xl max-w-xs" href="/">
                     {% if request.constellation.logo %}
                         <img src="{{ request.constellation.logo.url }}" />
                     {% else %}
