--- a/cl8/templates/_profile_empty.html
+++ b/cl8/templates/_profile_empty.html
@@ -10,6 +10,10 @@
         Want to see what people see for your profile?
         <a href="{% url 'profile-detail' request.user.profile.short_id %}">Go to your profile</a> where you can make changes.
     </h2> -->
-    <p>Find Icebreakers based on common interests</p>
+    {% if request.constellation.welcome_message %}
+        <p>{{request.constellation.welcome_message}}</p>
+    {% else %}
+        <p>Find Icebreakers based on common interests</p>
+    {% endif %}
     <a href="{% url 'profile-detail' request.user.profile.short_id %}" class="btn primary-btn font-bold text-xs	rounded-full ">Edit your own profile</a>
 </div>
