--- a/cl8/templates/_nav_menu.html
+++ b/cl8/templates/_nav_menu.html
@@ -57,6 +57,7 @@
                       <button class="btn mt-4 lg:mt-0 rounded-full primary-btn lg:ml-4" type="submit"><img src="{% static 'images/magnifying-glass.png' %}" style="width:20px !important" /></button>
                     </div>
                     {% endif %}
+                    <span class="hidden">{% render_field profile_filter.form.tags %}</span>
                   </div>
                 </form>
               </div>
